# Cosmify

./: Cargo.toml  README.md  dev.naktix.Cosmify.desktop  dev.naktix.Cosmify.metainfo.xml  install_cosmify.sh  install_origami.sh  reinstall.sh  uninstall_cosmify.sh  uninstall_origami.sh
data/: dev.naktix.Cosmify.desktop
src/: app.rs  lib.rs  main.rs  mpris.rs
